docs/7.57/md/abapset_bit.md
---
title: "SET BIT"
description: |
  Short Reference(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapset_bit_shortref.htm) Syntax SET BIT bitpos OF byte_string TO val. Effect This statement sets the bit in bit position bitpos of the variable byte_string to 1 or, if specified, to the value of data object val.
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapset_bit.htm"
abapFile: "abapset_bit.htm"
keywords: ["loop", "do", "if", "try", "catch", "data", "abapset", "bit"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_string.htm) →  [Statements for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_statements.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: SET BIT, ABAPSET_BIT, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for imp
rovement:)

SET BIT

[Short Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapset_bit_shortref.htm)

Syntax

SET BIT bitpos OF byte\_string *\[*TO val*\]*.

Effect

This statement sets the bit in bit position bitpos of the variable byte\_string to 1 or, if specified, to the value of data object val. The other bits in byte\_string remain unchanged.

The data object byte\_string must be byte-like, whereas bitpos and val are [numeric expression positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennumerical_expr_position_glosry.htm "Glossary Entry") of operand type i. The value of bitpos must be greater than 0 and val must be either 0 or 1, otherwise an uncatchable exception is raised. The bit positions in byte\_string are counted from left to right starting with the [most significant bit (MSB)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmost_significant_bit_glosry.htm "Glossary Entry") of the data object. If the value of bitpos is greater than the number of bits in byte\_string, no replacement is made and sy-subrc is set to 4.

System Fields

sy-subrc

Meaning

0

A bit of the data object byte\_string was set at position bitpos.

4

The value of bitpos is greater than the number of bits in byte\_string and no bit was set.

Hints

-   If byte\_string has the [deep](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendeep_glosry.htm "Glossary Entry") type xstring, a bit is set in the referenced byte string, not in the reference.
-   Setting single bits is intended in particular for preparing operators in [bit expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcompute_bit.htm).
-   The built-in function [bit-set](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbit_functions.htm) can also be used to set an individual bit.
-   Counting the bits from the [most significant bit (MSB)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmost_significant_bit_glosry.htm "Glossary Entry") can have unexpected results when working with components that count from the [least significant bit (LSB)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenleast_significant_bit_glosry.htm "Glossary Entry").

Example

In the data object hex with eight bits, the bit is set to the value 1 at the position determined by the loop counter sy-index, with all other bits set to 0. The output is 80 40 20 10 08 04 02 01.

DATA hex    TYPE x LENGTH 1.
DATA output TYPE string.
DO 8 TIMES.
  CLEAR hex.
  SET BIT sy-index OF hex.
  output &&= |{ hex } |.
ENDDO.
cl\_demo\_output=>display( output ).

[Exceptions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_exceptions.htm)

Uncatchable Exceptions

-   Cause: The bit position is greater than or equal to 0.
    Runtime error: BIT\_OFFSET\_NOT\_POSITIVE
-   Runtime error: BIT\_NO\_ZERO\_OR\_ONE